--- a/public/styles.css
+++ b/public/styles.css
@@ -1,5 +1,16 @@
+html, body {
+  padding: 0;
+  margin: 0;
+  height: 100%;
+  box-sizing: border-box;
+}
+
+html {
+  background: #feda7b;
+  background: linear-gradient(to bottom right, #feda7b, #ff9c5f);
+}
+
 body {
-  background: #89cff0;
   font-family: 'Lato', sans-serif;
 }
 
@@ -13,7 +24,7 @@ h1 {
 
 .container {
   width: 920px;
-  margin: 20px auto;
+  margin: 0 auto;
 }
 
 .beautify {
@@ -21,6 +32,7 @@ h1 {
 }
 
 #authBody {
+  padding-top: 40px;
 }
 
 #authContainer {
@@ -33,6 +45,12 @@ h1 {
 #authContent {
   box-shadow: 1px 3px 8px rgba(0, 0, 0, 0.2);
   padding: 10px;
+}
+
+#authBody img {
+  position: absolute;
+  left: -40px;
+  top: -20px;
 }
 
 #signin, #signup {
