--- a/public/styles.css
+++ b/public/styles.css
@@ -6,8 +6,8 @@ html, body {
 }
 
 html {
-  background: #feda7b;
-  background: linear-gradient(to bottom right, #feda7b, #ff9c5f);
+  background: #c2e59c;
+  background: linear-gradient(to bottom right, #64b3f4, #c2e59c);
 }
 
 body {
@@ -16,6 +16,7 @@ body {
 
 h1, h2, h3, h4, p {
   margin: 0;
+  padding: 0;
 }
 
 h1 {
@@ -24,6 +25,8 @@ h1 {
 
 .container {
   width: 920px;
+  height: 100%;
+  background-color: white;
   margin: 0 auto;
 }
 
@@ -36,7 +39,6 @@ h1 {
 }
 
 #authContainer {
-  background-color: white;
   padding: 30px 40px;
   margin: 0 auto;
   width: 570px;
