--- a/public/styles.css
+++ b/public/styles.css
@@ -44,12 +44,12 @@ h1 {
 }
 
 #mapEmbed {
-  width: 600px;
-  height: 487px;
+  width: 100%;
+  height: 500px;
 }
 
 .itineraryItem {
-  margin: 20px 0px 30px 0px;
+  /*margin: 20px 0px 30px 0px;*/
 }
 
 #exploreButton {
