--- a/public/styles.css
+++ b/public/styles.css
@@ -52,6 +52,7 @@ h1 {
   /*margin: 20px 0px 30px 0px;*/
 }
 
+#explorebody
 #exploreButton {
   background-image: linear-gradient(to bottom, #d98934, #47280d);
   border-radius: 10px;
@@ -150,4 +151,8 @@ h1 {
 .btn {
   border-radius: 3px;
   background: linear-gradient(to bottom, #FFF 5%, #f6f6f6 100%);
+}
+
+.btn #logout {
+  float: right;
 }
