--- a/public/styles.css
+++ b/public/styles.css
@@ -12,6 +12,7 @@ html {
 
 body {
   background-image: url('img/island.jpg');
+  background-attachment: fixed;
   font-family: 'Lato', sans-serif;
 }
 
@@ -27,9 +28,11 @@ h1 {
 .container {
   width: 980px;
   min-height: 100%;
-  background-color: white;
+  background-color: #fffaea;
   margin: 0 auto;
 }
+
+
 
 .beautify {
   font-family: 'Kaushan Script', cursive;
@@ -39,8 +42,12 @@ h1 {
   /*position: absolute;
   left: 20px;
   top: 0px;*/
-  width: 20%;
+  width: 30%;
   margin: 20px auto;
+}
+
+#exploreBody {
+  padding: 20px;
 }
 
 #mapEmbed {
@@ -52,7 +59,6 @@ h1 {
   /*margin: 20px 0px 30px 0px;*/
 }
 
-#explorebody
 #exploreButton {
   background-image: linear-gradient(to bottom, #d98934, #47280d);
   border-radius: 10px;
@@ -60,8 +66,22 @@ h1 {
   color: white;
   font-size: 20px;
   text-decoration: bold;
+  margin: 0px 0px 0px 20px;
   padding: 2px 20px 2px 20px;
   border: solid #f7e4c6 2px;
+}
+
+#logout {
+  float: right;
+  background-image: linear-gradient(to bottom, #d98934, #47280d);
+  border-radius: 10px;
+  font-family: 'Shadows Into Light', cursive;
+  color: white;
+  font-size: 10px;
+  margin: 0px 0px 0px 20px;
+  padding: 2px 20px 2px 20px;
+  border: solid #f7e4c6 2px;
+  width: 80px;
 }
 
 #googleMaps {
@@ -85,9 +105,7 @@ h1 {
   background-color: green;
 }
 
-#exploreBody {
-  padding: 20px;
-}
+
 
 
 #authBody {
@@ -151,8 +169,4 @@ h1 {
 .btn {
   border-radius: 3px;
   background: linear-gradient(to bottom, #FFF 5%, #f6f6f6 100%);
-}
-
-.btn #logout {
-  float: right;
 }
