--- a/public/styles.css
+++ b/public/styles.css
@@ -53,10 +53,28 @@ h1 {
 #mapEmbed {
   width: 100%;
   height: 500px;
+  position: absolute;
+  left: 850px;
+  top: 400px;
+  height: 280px;
+  width: 400px;
+  background-color: white;
+  border-radius: 5px;
+  border: 2px solid grey;
 }
 
 .itineraryItem {
-  /*margin: 20px 0px 30px 0px;*/
+  margin: 20px 0px 30px 0px;
+  font-size: 12px;
+}
+
+.itineraryHeader {
+  text-align: center;
+  color: grey;
+}
+
+.itineraryItem label{
+
 }
 
 #exploreButton {
