--- a/public/styles.css
+++ b/public/styles.css
@@ -55,6 +55,10 @@ h1 {
   border: 2px solid grey;
 }
 
+#googleMaps {
+  height: 400px;
+}
+
 .itineraryItem {
   margin: 20px 0px 30px 0px;
   font-size: 12px;
