--- a/public/styles.css
+++ b/public/styles.css
@@ -11,8 +11,8 @@ html {
 }
 
 body {
-  background-image: url('img/island.jpg');
-  background-attachment: fixed;
+  background: url('img/beach.jpg') no-repeat center center fixed;
+  background-size: cover;
   font-family: 'Lato', sans-serif;
 }
 
@@ -25,15 +25,29 @@ h1 {
   font-size: 50px;
 }
 
+button {
+  background-color: white;
+  text-transform: uppercase;
+  text-decoration: none;
+  box-shadow: inset 0px 1px 0px 0px #FFF;
+  border: 1px solid #dcdcdc;
+  cursor: pointer;
+  color: #666;
+  text-shadow: 0px 1px 0px #FFF;
+  height: 30px;
+}
+
+nav {
+  float: right;
+}
 
 .container {
   width: 980px;
   min-height: 100%;
-  background-color: #fffaea;
   margin: 0 auto;
+  padding: 20px;
+  background-color: rgba(0, 0, 0, 0.3);
 }
-
-
 
 .beautify {
   font-family: 'Kaushan Script', cursive;
@@ -41,11 +55,19 @@ h1 {
 
 #searchForm {
   width: 30%;
+  height: 2em;
   margin: 20px auto;
 }
 
-#contentBody {
-  padding: 20px;
+#searchLabel {
+  padding-right: 5px;
+}
+
+#searchLabel img {
+  max-width: 30px;
+  max-height: 30px;
+  position: relative;
+  top: 10px;
 }
 
 #exploreContent {
@@ -118,6 +140,14 @@ h1 {
   float: left;
 }
 
+#authHeader {
+  padding-bottom: 8px;
+}
+
+#authHeader h1, .nav h2 {
+  color: white;
+}
+
 #authBody {
   padding-top: 40px;
 }
@@ -141,6 +171,11 @@ h1 {
   z-index: -1;
 }
 
+#authNav button {
+  font-size: 12px;
+  width: 70px;
+}
+
 #signin, #signup {
   padding: 20px;
   height: 230px;
@@ -161,6 +196,15 @@ h1 {
   margin-bottom: 5px;
 }
 
+.nav {
+  padding-bottom: 10px;
+  border-bottom: 1px solid white;
+}
+
+.nav-title {
+  float: left;
+}
+
 .clearfix:after {
   content: " "; /* Older browser do not support empty content */
   visibility: hidden;
@@ -173,22 +217,6 @@ h1 {
   padding-top: 10px;
   font-size: 12px;
   color: red;
-}
-
-.btn, #authNav button {
-  background-color: white;
-  height: 30px;
-  text-transform: uppercase;
-  text-decoration: none;
-  font-size: 12px;
-  box-shadow: inset 0px 1px 0px 0px #FFF;
-  border: 1px solid #dcdcdc;
-  cursor: pointer;
-  color: #666;
-  text-shadow: 0px 1px 0px #FFF;
-  font-size: 12px;
-  height: 30px;
-  width: 70px;
 }
 
 .btn {
