--- a/public/styles.css
+++ b/public/styles.css
@@ -67,6 +67,9 @@ h1 {
 .itineraryItem {
   margin: 20px 0px 30px 0px;
   font-size: 12px;
+  border-bottom: 6px solid red;
+  background-color: lightgrey;
+  border-radius: 5px;
 }
 
 .itineraryHeader {
