--- a/public/styles.css
+++ b/public/styles.css
@@ -100,6 +100,10 @@ button {
   margin: 15px 15px 0 0;
 }
 
+.placeHeader {
+  color: grey;
+}
+
 .itineraryItem {
   font-size: 12px;
   border-bottom: 6px solid red;
@@ -144,7 +148,7 @@ button {
 
 #itinerary, #place {
   background-color: white;
-  min-height: 350px;
+  min-height: 100px;
   width: 49%;
   border-radius: 5px;
 }
