--- a/public/styles.css
+++ b/public/styles.css
@@ -147,7 +147,7 @@ button {
 }
 
 #itinerary, #place {
-  background-color: white;
+  background-color: rgba(255, 255, 255, 0.9);
   min-height: 100px;
   width: 49%;
   border-radius: 5px;
